GNOME Bugzilla – Bug 544539
Can't build against NetworkManager 0.7 trunk
Last modified: 2008-07-24 17:02:26 UTC
It seems that NetworkManager 0.7 recently renamed some files and changed some functions of its API. gnome-main-menu, as a result, doesn't build anymore against NM 0.7. Attached patch fixes the build.
Created attachment 115165 [details] [review] patch
Thanks for fixing this (grrr! unstable APIs!). Please go ahead and commit.
Committed to trunk. 2008-07-24 Cosimo Cecchi <cosimoc@gnome.org> http://bugzilla.gnome.org/show_bug.cgi?id=544539 * main-menu/src/network-status-agent.c: (nm_get_device_info): Fix the build against NetworkManager 0.7 trunk.