http://bugzilla.gnome.org/show_bug.cgi?id=544539

2008-07-24  Cosimo Cecchi  <cosimoc@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=544539	

	* main-menu/src/network-status-agent.c: (nm_get_device_info):
	Fix the build against NetworkManager 0.7 trunk.

svn path=/trunk/; revision=482